--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/maxBox"
-    tools:context=".MainActivity">
+    android:id="@+id/rootBox"
+    tools:context=".MainActivity"
+    android:background="#000000"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.zhihuan.daoyi.cad.views.DragRelativeLayoutView
+        android:id="@+id/maxBox"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/cad"
+        >
+        <com.zhihuan.daoyi.cad.views.DragScaleCircleView
+            android:id="@+id/c1"
+            android:layout_height="100dp"
+            android:layout_width="100dp"
+            android:clickable="true"
+            />
+        <com.zhihuan.daoyi.cad.views.DragScaleRectView
+            android:id="@+id/r1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:layout_below="@id/c1"
+            />
+    </com.zhihuan.daoyi.cad.views.DragRelativeLayoutView>
+
 
 </RelativeLayout>
