--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,28 +8,62 @@
     android:id="@+id/rootBox"
     tools:context=".MainActivity"
     android:background="#000000"
+    android:orientation="vertical"
     >
 
     <com.zhihuan.daoyi.cad.views.DragRelativeLayoutView
         android:id="@+id/maxBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="@drawable/cad"
         >
-        <com.zhihuan.daoyi.cad.views.DragScaleCircleView
-            android:id="@+id/c1"
-            android:layout_height="100dp"
-            android:layout_width="100dp"
-            android:clickable="true"
-            />
-        <com.zhihuan.daoyi.cad.views.DragScaleRectView
-            android:id="@+id/r1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:clickable="true"
-            android:layout_below="@id/c1"
-            />
+<!--        <com.zhihuan.daoyi.cad.views.DragBaseView-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:clickable="true"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            />-->
+<!--        <com.zhihuan.daoyi.cad.views.DragScaleCircleView-->
+<!--            android:id="@+id/c1"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:clickable="true"-->
+<!--            />-->
+<!--        <com.zhihuan.daoyi.cad.views.DragScaleRectView-->
+<!--            android:id="@+id/r1"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:clickable="true"-->
+<!--            android:layout_below="@id/c1"-->
+<!--            />-->
     </com.zhihuan.daoyi.cad.views.DragRelativeLayoutView>
 
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/rect_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="矩形"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:padding="10dp"
+            />
+        <TextView
+            android:id="@+id/circle_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="圆形"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            />
+    </LinearLayout>
+</LinearLayout>
