--- a/app/src/main/res/layout/baseview.xml
+++ b/app/src/main/res/layout/baseview.xml
@@ -10,8 +10,10 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_baseline_close_24"
+        android:tint="@color/white"
         android:layout_alignParentRight="true"
         android:visibility="visible"
+        android:id="@+id/close"
         />
 
     <RelativeLayout
@@ -19,6 +21,21 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         >
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+            <RelativeLayout
+                android:id="@+id/viewBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="7dp"
+                android:clickable="true"
+                >
+            </RelativeLayout>
+        </RelativeLayout>
+
         <View
             android:id="@+id/lt1"
             android:layout_width="20dp"
@@ -27,7 +44,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:clickable="true"
-
+            android:longClickable="true"
+            android:visibility="gone"
+            android:padding="5dp"
             />
         <View
             android:id="@+id/lb1"
@@ -37,17 +56,10 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:clickable="true"
+            android:longClickable="true"
+            android:visibility="gone"
+            android:padding="5dp"
             />
-        <RelativeLayout
-            android:id="@+id/viewBox"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="7dp"
-            android:clickable="true"
-            >
-        </RelativeLayout>
-
-
 
         <View
             android:id="@+id/rt1"
@@ -56,6 +68,9 @@
             android:background="@drawable/shape_reacts"
             android:layout_alignParentRight="true"
             android:clickable="true"
+            android:visibility="gone"
+            android:longClickable="true"
+            android:padding="5dp"
             />
 
         <View
@@ -66,6 +81,9 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:clickable="true"
+            android:visibility="gone"
+            android:longClickable="true"
+            android:padding="5dp"
             />
     </RelativeLayout>
 
