--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,13 +51,14 @@
                 >
                 <com.zhihuan.daoyi.cad.views.DragFrameLayoutView
                     android:id="@+id/maxBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     >
                     <ImageView android:src="@drawable/test"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         />
 
                     <!--            <com.zhihuan.daoyi.cad.views.DragBaseView-->
