--- a/app/src/main/res/layout/baseview.xml
+++ b/app/src/main/res/layout/baseview.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp"
+    android:padding="0dp"
     android:id="@+id/box"
     >
     <ImageView
@@ -19,13 +19,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_margin="5dp"
+        android:layout_below="@id/close"
         >
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="5dp">
             <RelativeLayout
                 android:id="@+id/viewBox"
                 android:layout_width="match_parent"
