--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,5 +99,15 @@
             android:padding="10dp"
             android:layout_marginLeft="10dp"
             />
+        <TextView
+            android:id="@+id/canvas_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="画笔"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
+            />
     </LinearLayout>
 </RelativeLayout>
