--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,12 +41,13 @@
 <!--                />-->
 <!--        </RelativeLayout>-->
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             >
             <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 >
                 <com.zhihuan.daoyi.cad.views.DragFrameLayoutView
@@ -55,13 +56,13 @@
                     android:layout_height="2000dp"
                     android:layout_gravity="center"
                     >
+
                     <ImageView
                         android:id="@+id/back"
-                        android:src="@drawable/test"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        />
+                        android:src="@drawable/test" />
 
                     <!--            <com.zhihuan.daoyi.cad.views.DragBaseView-->
                     <!--                android:layout_width="200dp"-->
@@ -74,6 +75,19 @@
         </RelativeLayout>
 
     </FrameLayout>
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/down_message"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_alignParentTop="true"
+        android:layout_margin="20dp"
+        android:padding="5dp"
+        android:visibility="gone"
+        />
 
 
     <LinearLayout
@@ -82,37 +96,55 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         >
+        <ImageView
+            android:id="@+id/touch"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_baseline_touch_app_24"
+            android:background="@color/white"
+            />
         <CheckBox
             android:id="@+id/rectBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:text="矩形"
             android:textColor="@color/black"
             android:background="@color/white"
-            android:padding="10dp"
             android:theme="@style/myCheck"
             />
         <CheckBox
             android:id="@+id/circle_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:text="圆形"
             android:textColor="@color/black"
             android:background="@color/white"
-            android:padding="10dp"
-            android:layout_marginLeft="10dp"
             android:theme="@style/myCheck"
             />
         <CheckBox
             android:id="@+id/canvas_btn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:text="画笔"
             android:textColor="@color/black"
             android:background="@color/white"
-            android:padding="10dp"
-            android:layout_marginLeft="10dp"
             android:theme="@style/myCheck"
             />
+
+        <CheckBox
+            android:id="@+id/text_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="文字"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:theme="@style/myCheck"
+            />
+
     </LinearLayout>
 </RelativeLayout>
