--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,74 +7,40 @@
     android:layout_height="match_parent"
     android:id="@+id/rootBox"
     tools:context=".MainActivity"
-    android:background="#000000"
     android:orientation="vertical"
+    android:background="@color/black"
     >
 
 
-
-
-<!--    <RelativeLayout-->
-<!--        android:id="@+id/maxBox2"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:scaleX="2"-->
-<!--        android:scaleY="2"-->
-<!--        >-->
-
-<!--    </RelativeLayout>-->
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-<!--        <RelativeLayout android:id="@+id/maxBox"-->
-<!--            android:layout_width="2000dp"-->
-<!--            android:layout_height="2000dp"-->
-<!--            android:orientation="horizontal">-->
+        android:layout_height="fill_parent"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/title"
+        >
 
-<!--            <ImageView android:src="@drawable/test"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"/>-->
-
-<!--            <com.zhihuan.daoyi.cad.views.DragBaseView-->
-<!--                android:layout_width="200dp"-->
-<!--                android:layout_height="200dp"-->
-<!--                />-->
-<!--        </RelativeLayout>-->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <com.zhihuan.daoyi.cad.views.DragFrameLayoutView
+            android:id="@+id/maxBox"
+            android:layout_width="500dp"
+            android:layout_height="500dp"
             android:layout_gravity="center"
             >
-            <FrameLayout
+
+            <ImageView
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                >
-                <com.zhihuan.daoyi.cad.views.DragFrameLayoutView
-                    android:id="@+id/maxBox"
-                    android:layout_width="2000dp"
-                    android:layout_height="2000dp"
-                    android:layout_gravity="center"
-                    >
+                android:src="@drawable/test" />
 
-                    <ImageView
-                        android:id="@+id/back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/test" />
-
-                    <!--            <com.zhihuan.daoyi.cad.views.DragBaseView-->
-                    <!--                android:layout_width="200dp"-->
-                    <!--                android:layout_height="200dp"-->
-                    <!--                />-->
-                </com.zhihuan.daoyi.cad.views.DragFrameLayoutView>
-
-            </FrameLayout>
-
-        </RelativeLayout>
+            <!--            <com.zhihuan.daoyi.cad.views.DragBaseView-->
+            <!--                android:layout_width="200dp"-->
+            <!--                android:layout_height="200dp"-->
+            <!--                />-->
+        </com.zhihuan.daoyi.cad.views.DragFrameLayoutView>
 
     </FrameLayout>
+
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
@@ -83,12 +49,11 @@
         android:text="@string/down_message"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:layout_alignParentTop="true"
         android:layout_margin="20dp"
         android:padding="5dp"
         android:visibility="gone"
+        android:layout_alignParentTop="true"
         />
-
 
     <LinearLayout
         android:layout_width="fill_parent"
