--- a/app/src/main/res/layout/base_fragment.xml
+++ b/app/src/main/res/layout/base_fragment.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:orientation="vertical"
     >
 
-
-    <com.next.easynavigation.view.EasyNavigationBar
-        android:id="@+id/navigationBar"
+    <com.zhihuan.daoyi.cad.views.Titlabar
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone"
         />
-</RelativeLayout>
+
+</LinearLayout>
