--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
 
     <color name="gray">#f5f5f5</color>
     <color name="blue">#00BCD4</color>
+    <color name="red">#EB554A</color>
+    <color name="green">#4CAF50</color>
 </resources>
