个人中心，登录

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="centers" type="id"/>
+
+    <!--  空布局  -->
+    <item name="em_message" type="id"/>
+    <item name="em_logo" type="id"/>
 </resources>
