--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootBox"
     android:orientation="vertical"
     >
     <com.zhihuan.daoyi.cad.views.Titlabar
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:visibility="gone"
         />
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/maxBox"
+    <com.zhihuan.daoyi.cad.views.X5WebView
+        android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-</RelativeLayout>
+</LinearLayout>
