--- a/app/src/main/res/layout/local_drawings_fragment.xml
+++ b/app/src/main/res/layout/local_drawings_fragment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="0dp"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
@@ -10,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabTextColor="@color/black"
+        android:background="@color/white"
         app:tabSelectedTextColor="@color/blue"
+        app:tabIndicatorColor="@color/blue"
         app:tabRippleColor="@null"
         app:tabMaxWidth="100dp"
         android:paddingTop="2dp"
